# ScientificVisualization

./: .gitignore  LICENSE  README.md
ML_for_VIS/: img_scatterplot.py  preprocessing.py  requirements.txt
assignment4_temporary/: Pre-integratedVR.glsl  pre-integration.cpp
build-smoke_framework-Qt_6_3_1_for_macOS-Debug/: Makefile  moc_legend.cpp  moc_mainwindow.cpp  moc_visualization.cpp  qrc_resources.cpp  ui_mainwindow.h
build-smoke_framework-Qt_6_3_1_for_macOS-Debug/.qtc_clangd/: compile_commands.json
build-smoke_framework-Qt_6_3_1_for_macOS-Debug/.qtc_clangd/.cache/clangd/index/: QAction.097EE33D7E53B0A4.idx  QApplication.B6B73B155B514D9F.idx  QApplication.C3B4BE180E690FFA.idx  QCheckBox.187065DEBE10893B.idx  QColorDialog.A5868B268936EFF8.idx  QComboBox.E7BB8EB91D80B2DB.idx  QDebug.577F1D11A14CC631.idx  QDial.E0BDB42DFED9D72F.idx  QDoubleSpinBox.BB0468BC96787477.idx  QElapsedTimer.3401D398A8C218E9.idx  QFormLayout.E0C8FA6A60C436B8.idx  QGridLayout.CE1FDF5B3424E1B4.idx  QGroupBox.413A9A1F736AFBC1.idx  QHBoxLayout.909F4F9300BBE679.idx  QLCDNumber.BD51B2A5301FA974.idx  QLCDNumber.D748E9A3BF4E81CA.idx  QLabel.5C10C8CE4114E0D9.idx  QLayout.265DC457AD9179EB.idx  QList.2E4B2BD1BA1BA490.idx  QMainWindow.8B3EC3A695AF0E80.idx  QMainWindow.C74A34A45D939418.idx  QMenuBar.8C1DFCD9EA1FDBFD.idx  QMouseEvent.D0B45BB59242BFCA.idx  QObject.68081997285DEDA2.idx  QOpenGLDebugLogger.FFA8499CDD34B555.idx  QOpenGLFunctions_3_3_Core.F34E2167AEFF9E95.idx  QOpenGLShaderProgram.32EBE9B16C2A0A8E.idx  QOpenGLVersionFunctions.7ED9AE101871C261.idx  QOpenGLVersionProfile.DE78A33A42AAC683.idx  QOpenGLWidget.3904891EAFEC073A.idx  QPair.0543D899BC962579.idx  QPushButton.7820817B6E445EB1.idx  QRadioButton.9A88E114CA9B2C52.idx  QRect.7A633B334C4D5187.idx  QScopedPointer.49E62FD762822436.idx  QSize.5A414C516C3A4886.idx  QSizeF.1ED6C11295D176B0.idx  QSlider.FD2C7997C45923FB.idx  QSpinBox.AB01FB7D63E49C24.idx  QStatusBar.4EDB5202ECF29F87.idx  (+283 more)
build-smoke_framework-Qt_6_3_1_for_macOS-Debug/smoke_framework.app/Contents/: Info.plist
build-smoke_framework-Qt_6_3_1_for_macOS-Debug/smoke_framework.app/Contents/MacOS/: smoke_framework
scivis_toolkit_framework/: CMakeLists.txt  color.h  colormap.h  constants.h  datatype.h  datraw.h  glyph.cpp  glyph.h  interpolation.h  isoline.cpp  isoline.h  legend.cpp  legend.h  legendscalardata.h  legendvectordata.h  lic.cpp  lic.h  mainwindow.h  mainwindow.ui  mainwindow_general.cpp  mainwindow_heightplot.cpp  mainwindow_isolines.cpp  mainwindow_lic.cpp  mainwindow_preprocessing.cpp  mainwindow_scalardata.cpp  mainwindow_simulation.cpp  mainwindow_vectordata.cpp  mainwindow_volumerendering.cpp  movingrange.cpp  movingrange.h  resources.qrc  simulation.cpp  simulation.h  texture.cpp  texture.h  visualization.cpp  visualization.h  visualization_input.cpp  visualization_opengl.cpp
scivis_toolkit_framework/datraw/: convert.h  convert.inl  endianness.h  grid_type.h  info.h  info.inl  literal.h  parse.h  parse.inl  raw_reader.h  raw_reader.inl  scalar_type.h  string.h  string.inl  types.h  variant.h  variant.inl
scivis_toolkit_framework/shaders/: glyph.frag  glyph.vert  heightplot.frag  heightplot_clamp.vert  heightplot_scale.vert  isolines.geom  isolines.vert  lic.frag  lic.vert  passthrough2d.vert  scalarData_clamp.vert  scalarData_customcolormap.frag  scalarData_scale.vert  scalarData_texture.frag  volume_rendering.frag  volume_rendering.vert  volume_rendering_lighting.frag  volume_rendering_overlay_rendering.frag  volume_rendering_preintegration.frag
smoke_framework/: colormap.h  glyph.cpp  isoline.cpp  isoline.h  legend.cpp  legend.h  legendscalardata.h  legendvectordata.h  lic.cpp  lic.h  main.cpp  mainwindow.h  mainwindow.ui  mainwindow_general.cpp  mainwindow_heightplot.cpp  mainwindow_isolines.cpp  mainwindow_lic.cpp  mainwindow_scalardata.cpp  mainwindow_simulation.cpp  mainwindow_vectordata.cpp  mainwindow_visualization.cpp  mainwindow_volumerendering.cpp  movingaverage.h  pocketfft_hdronly.h  resources.qrc  simulation.cpp  simulation.h  smoke_framework.pro  texture.cpp  texture.h  visualization.cpp  visualization.h  visualization_input.cpp  visualization_opengl.cpp
smoke_framework/datraw/: info.inl  raw_reader.inl
smoke_framework/shaders/: glyphsshading.frag  glyphsshading.vert  heightplot.frag  heightplot_clamp.vert  heightplot_scale.vert  isolines.frag  isolines.vert  lic.frag  lic.vert  passthrough2d.vert  scalarData_clamp.vert  scalarData_customcolormap.frag  scalarData_scale.vert  scalarData_texture.frag  volume_rendering.frag  volume_rendering.vert  volume_rendering2.frag  volume_rendering_lighting.frag  volume_rendering_overlay_rendering.frag  volume_rendering_preintegration.frag
